# Boost.NumPy

./: CHANGELOG.rst  CMakeLists.txt  package.xml
boost/numpy/: ndarray.hpp
libs/numpy/example/: gaussian.cpp
libs/numpy/src/: CMakeLists.txt
