<?xml version="1.0"?>
<package format="2">
  <name>ros_boost_numpy</name>
  <version>0.0.1</version>
  <description>A ROS package for Boost.Numpy extension</description>

  <maintainer email="ryan@rwsinnet.com">Ryan Sinnet</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Boost Software License</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!--<url type="website">http://wiki.ros.org/node_director</url> -->
  <url type="repository">https://github.com/rsinnet/ros_boost_numpy</url>

  <author email="bpelletier@misorobotics.com">Benjamin Pelletier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>python</depend>
  <depend>python-numpy</depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>miso_common</build_depend>

  <build_export_depend>miso_common</build_export_depend>

  <export/>
</package>
