<?xml version="1.0"?>
<package format="2">
  <name>ros_boost_numpy</name>
  <version>1.0.0</version>
  <description>A ROS package for Boost.Numpy extension</description>
  <maintainer email="ryan@rwsinnet.com">Ryan Sinnet</maintainer>
  <license>Boost Software License</license>
  <url type="repository">https://github.com/rsinnet/ros_boost_numpy.git</url>
  <url type="website">http://wiki.ros.org/rsinnet/ros_boost_numpy/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>python</depend>
  <depend>python-numpy</depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>miso_catkin_cmake_modules</build_depend>

  <build_export_depend>miso_catkin_cmake_modules</build_export_depend>

  <export/>
</package>
